--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-celery-beat==1.5.0
 django-cors-headers==3.2.1
 djangorestframework==3.10.3
 gunicorn==20.1.0
+psycopg2-binary==2.8.6
 pytz==2021.1
 redis==3.4.1
 whitenoise==5.2.0
