--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-appconf==1.0.4
 django-celery-beat==1.5.0
 django-cors-headers==3.2.1
 djangorestframework==3.10.3
+django-rest-swagger==2.2.0
 gunicorn==20.1.0
 psycopg2-binary==2.8.6
 pytz==2021.1
